[workspace]
resolver = "2"
members = [
    "eth-bytecode-db",
    "eth-bytecode-db/entity",
    "eth-bytecode-db/migration",
    "eth-bytecode-db/verifier-alliance-entity",
    "eth-bytecode-db/verifier-alliance-migration",
    "eth-bytecode-db-server",
    "eth-bytecode-db-proto",
]

[workspace.dependencies]
smart-contract-verifier-proto = { path = "../smart-contract-verifier/smart-contract-verifier-proto" }